# vbfmet-ntuplemaking

./: .asetup.save  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README  README.md  fout_v14raw.root  fout_v15raw.root  tableOfcontent.rb
VBFInvAnalysis/: CMakeLists.txt
VBFInvAnalysis/Root/: CutFlowTool.cxx  DijetFinder.cxx  DijetInfo.cxx  GetTruthBosonP4.cxx  HelperFunctions.cxx  LinkDef.h  PartonClusterer.cxx  SherpaPartonCluster.cxx  TruthFilter.cxx  VBFInv.cxx  VBFInv.cxx.orig  VBFInvSherpaTruth.cxx  VBFInvTruth.cxx  VBFInvVjetsRW.cxx  outElectron.cxx  outEvent.cxx  outFatJet.cxx  outHolder.cxx  outJet.cxx  outMET.cxx  outMuon.cxx  outPhoton.cxx  outRnSmear.cxx  outTau.cxx  outTrackJet.cxx  outTrackMET.cxx
VBFInvAnalysis/Root/.sys.v#.VBFInv.cxx/: 1555065118.07788efa  1555065185.07788f52  1555065465.07789048  1555065522.07789072  1555065544.07789074  1555070162.0778cc1f  1555070166.0778cc22
VBFInvAnalysis/VBFInvAnalysis/: CutFlowTool.h  DijetFinder.h  DijetInfo.h  GetTruthBosonP4.h  HelperFunctions.h  PartonClusterer.h  SherpaPartonCluster.h  TruthFilter.h  VBFInv.h  VBFInvSherpaTruth.h  VBFInvTruth.h  VBFInvVjetsRW.h  VBFInv_Defs.h  contentHolder.h  outElectron.h  outEvent.h  outFatJet.h  outHolder.h  outJet.h  outMET.h  outMuon.h  outObject.h  outPhoton.h  outRnSmear.h  outTau.h  outTrackJet.h  outTrackMET.h
VBFInvAnalysis/data/AOD/: EVNT_KT_PTV_samples.txt  EXOT5_p3712_skimmed_VBFHInv.txt  data.txt  gamma_AOD.txt  mc16a_AOD.txt  mc16d_AOD.txt  mc16e_AOD.txt
VBFInvAnalysis/data/arguments/: v05_args.txt  v09_args.txt  v10_args.txt  v11Syst_args.txt  v11_args.txt  v19_args.txt  v21_args.txt  v22_args.txt  v31_args.txt  v35_args.txt  v40_args.txt  v42_args.txt  v43_args.txt  v44_args.txt  v45_args.txt
VBFInvAnalysis/data/logs/: v05_data15_EXOT5.txt  v05_data16_EXOT5.txt  v05_mc16a_EXOT5.txt  v05_pilot.txt
VBFInvAnalysis/data/ntuples/: v00_mc16a_bkg.txt  v01_mc16a_bkg.txt  v02_data1516.txt  v02_mc16a_bkg.txt
VBFInvAnalysis/data/samples/: AODMC16a  data1516_HIGG2D1_p3917.txt  debug.txt  mc16a_AOD.txt  mc16a_bkg_HIGG2D1_p3916.txt  mc16d_bkg_HIGG2D1_p3916.txt  mc16e_bkg_HIGG2D1_p3916.txt  test.txt  v01_mc16a_HIGG2D1.txt  v05_mc16a_EXOT5.txt  v05_pilot.txt  v09_data17_EXOT5.txt  v09_mc16a_EXOT5.txt  v0_mc16a_HIGG2D1.txt  v11Syst_data16_EXOT5.txt  v11Syst_mc16a_EXOT5.txt  v11Syst_pilot.txt  v11_data15_EXOT5.txt  v11_mc16a_EXOT5.txt  v11_mc16a_EXOT5_extra.txt  v11_pilot.txt  v17_data17_EXOT5_cont.txt  v17_data18_EXOT5_cont.txt  v17_mc16a_EXOT5.txt  v17_mc16a_EXOT5_extra.txt  v17_mc16d_EXOT5.txt  v17_mc16e_EXOT5.txt  v19_mc16a_EXOT5.txt  v19_pilot.txt  v21_data15_16_EXOT5.txt  v22_data1516_Oldptag.txt  v22_pilot.txt  (+49 more)
VBFInvAnalysis/scripts/: #runVBF.sh#  checkLocal.py  checkMC.py  checkMC.py~  checkSamples.py  commitCutFlowCheck.py  getMCAll.py  listMCSamples.sh  listSamples.py  runVBF.py  runVBF.sh  setupRelease.sh  sherpa_print_event_record.py  testDocker.sh
VBFInvAnalysis/share/: SUSYTools_Default.conf  SUSYTools_TTMet.conf  SUSYTools_TTMet.conftight  SUSYTools_Tenacious_VBF.conf  SUSYTools_Tight_VBF.conf  SUSYTools_Tighter_VBF.conf  SUSYTools_VBF.conf  SUSYTools_VBF.conftight  ttMET.conf  vbfinv.conf
(+98 files in other folders)
